syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/stkali/garden/pb";

message User {
    string username = 1;
    string full_name = 2;
    string email = 3;
    google.protobuf.Timestamp password_changed_at = 4;
    google.protobuf.Timestamp created_at = 5;
}

message UserInfo{
    string SessionID = 1;
    string AccessToken = 2;
    google.protobuf.Timestamp AccessExpireAt = 3;
    string RefreshToken = 4;
    google.protobuf.Timestamp RefreshExpireAt = 5;
    string Username = 6;
    string FullName = 7;
    string Email = 8;
    google.protobuf.Timestamp CreatedAt = 9;
}