syntax = "proto3";

package pb;

option go_package = "github.com/stkali/garden/pb";

message CreateUserRequest {
    string username = 1;
    string full_name = 2;
    string email = 3;
    string password = 4;
    string confirm_password = 5;
}

